--- a/style.css
+++ b/style.css
@@ -1,31 +1,54 @@
-body {
-    font-family: Arial, sans-serif;
-}
-.banner {
-    background-color: #7289da;
-    color: white;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.banner .user-info {
+/* From Uiverse.io by JaydipPrajapati1910 */
+button {
+    background: transparent;
+    position: relative;
+    padding: 5px 15px;
     display: flex;
     align-items: center;
-}
-.banner .user-info img {
-    border-radius: 50%;
-    margin-right: 10px;
-    width: 40px;
-    height: 40px;
-}
-.banner .login-btn {
-    background-color: #ffffff;
-    color: #7289da;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
+    font-size: 17px;
+    font-weight: 600;
     text-decoration: none;
-    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid rgba(88, 101, 242, 1);
+    border-radius: 25px;
+    outline: none;
+    overflow: hidden;
+    color: rgba(88, 101, 242, 1);
+    transition: color 0.3s 0.1s ease-out;
+    text-align: center;
+}
+
+.link{
+    text-decoration:none;
+}
+
+button span {
+    margin: 10px;
+}
+
+button::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    content: '';
+    border-radius: 50%;
+    display: block;
+    width: 20em;
+    height: 20em;
+    left: -5em;
+    text-align: center;
+    transition: box-shadow 0.5s ease-out;
+    z-index: -1;
+}
+
+button:hover {
+    color: #fff;
+    border: 1px solid rgba(88, 101, 242, 1);
+}
+
+button:hover::before {
+    box-shadow: inset 0 0 0 10em rgba(88, 101, 242, 1);
 }
