--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Poppins:wght@400;600&display=swap');
+
+
 /* From Uiverse.io by JaydipPrajapati1910 */
 button {
     background: transparent;
@@ -51,4 +54,71 @@ button:hover {
 
 button:hover::before {
     box-shadow: inset 0 0 0 10em rgba(88, 101, 242, 1);
+}
+
+*{
+    font-family: Poppins, sans-serif;
+    margin: 0px;
+}
+
+
+.username-container{
+    background-color: #16161a;
+    width: 200px;
+    display: flex;
+    border-radius: 50px;
+    padding: 10px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+}
+
+.profile-container{
+    display: flex;
+    gap: 0.5em;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.profile-img {
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+}
+
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.user-title{
+    color: white;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.username {
+    color: #4c4c55;
+}
+
+.menu-bar{
+    display: flex;
+    align-items: center;
+}
+
+.menu-bar i{
+    font-size: 25px;
+    color: white;
+}
+
+.menu-bar i:hover{
+    cursor: pointer;
 }
